# innowise_laboratory

./: book_api.db
lecture_1/: .gitignore  pyproject.toml
lecture_2/: mini_profile_generator.py
lecture_3/: main.py
lecture_4/: school.db  school.sql
lecture_5/: .gitignore  pyproject.toml
lecture_5/book_api/: .gitignore  main.py
lecture_5/book_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lecture_5/book_api/api/v1/: dependencies.py  router.py
lecture_5/book_api/api/v1/views/: books.py
lecture_5/book_api/application/services/: book.py
lecture_5/book_api/core/: container.py
lecture_5/book_api/core/configs/: __init__.py  database.py
lecture_5/book_api/domain/: entities.py  errors.py  services.py  use_cases.py
lecture_5/book_api/gateways/sqlite/: database.py  repositories.py
lecture_5/book_api/gateways/sqlite/models/: book.py
lecture_5/book_api/presentation/api/v1/: dependencies.py  router.py  schemas.py
lecture_5/book_api/presentation/api/v1/views/: books.py
lecture_5/book_api/services/: book.py
lecture_5/book_api/tests/: conftest.py
lecture_5/book_api/tests/api/: test_books_api.py
lecture_5/book_api/tests/mocks/: factories.py  services.py
lecture_5/book_api/tests/use_case/: test_books_use_cases.py
lecture_5/tests/: conftest.py
lecture_5/tests/mocks/: factories.py  services.py
lecture_5/tests/use_case/: test_books_use_cases.py
lecture_6/: .dockerignore  .pre-commit-config.yaml  Dockerfile  env.example
lecture_6/book_api/: main.py
lecture_6/book_api/application/: commands.py  use_cases.py
(+11 files in other folders)
